# terminus-astro

./: README.md
docs/: refraction.md
docs/book/: .gitignore  README.md  myst.yml  requirements.txt
docs/book/pages/: intro.md
docs/book/pages/concepts/: time.md
generator/sofa/: LICENSE
generators/astropy_generator/: README.md  pyproject.toml
generators/astropy_generator/src/testgen/: config.py  main.py
micropython/scripts/: launch-unix.sh  setup-unix.sh
micropython/scripts/py/: install-deps.py
micropython/src/: main.py
micropython/src/tmns/astro/apps/time_converter/: time_converter.py
micropython/src/tmns/astro/time/: __init__.py
python/: pyproject.toml
python/src/tmns/astro/: refraction.py  utilities.py
